# qwtplot3d

./: CMakeLists.txt
.github/workflows/: main.yml
cmake/: Findgl2ps.cmake
examples/autoswitch/: autoswitch.h
examples/axes/: axesmainwindow.cpp  axesmainwindow.h
examples/enrichments/: enrichmentmainwindow.h
examples/mesh2/: lightingdlg.cpp  lightingdlg.h  mesh.cpp  mesh2mainwindow.cpp  mesh2mainwindow.h
include/: qwt3d_autoscaler.h  qwt3d_axis.h  qwt3d_color.h  qwt3d_colorlegend.h  qwt3d_coordsys.h  qwt3d_enrichment.h  qwt3d_enrichment_std.h  qwt3d_global.h  qwt3d_io.h  qwt3d_io_gl2ps.h  qwt3d_io_reader.h  qwt3d_label.h  qwt3d_openglhelper.h  qwt3d_plot.h  qwt3d_portability.h  qwt3d_scale.h  qwt3d_surfaceplot.h  qwt3d_types.h
src/: qwt3d_autoscaler.cpp  qwt3d_axis.cpp  qwt3d_coordsys.cpp  qwt3d_function.cpp  qwt3d_gridmapping.cpp  qwt3d_gridplot.cpp  qwt3d_io.cpp  qwt3d_io_gl2ps.cpp  qwt3d_io_reader.cpp  qwt3d_label.cpp  qwt3d_meshplot.cpp  qwt3d_mousekeyboard.cpp  qwt3d_movements.cpp  qwt3d_parametricsurface.cpp  qwt3d_plot.cpp  qwt3d_surfaceplot.cpp
